==> MarginallyClever/Makelangelo-firmware/libraries/TMC2130Stepper/src/source/TMC2130Stepper.cpp <==
#include "TMC2130Stepper.h"
#include "TMC2130Stepper_MACROS.h"
#include <SPI.h>
#include "SW_SPI.h"

void TMC2130Stepper::begin() {
#ifdef TMC2130DEBUG
	Serial.println("TMC2130 Stepper driver library");
	Serial.print("Enable pin: ");
	Serial.println(_pinEN);
	Serial.print("Direction pin: ");
	Serial.println(_pinDIR);
	Serial.print("Step pin: ");
	Serial.println(_pinSTEP);
	Serial.print("Chip select pin: ");
	Serial.println(_pinCS);
#endif
	delay(200);

	//set pins
	if (_pinEN != 0xFFFF) {
		pinMode(_pinEN, OUTPUT);
		digitalWrite(_pinEN, HIGH); //deactivate driver (LOW active)
	}
	if (_pinDIR != 0xFFFF) {
		pinMode(_pinDIR, OUTPUT);
	}
	if (_pinSTEP != 0xFFFF) {
		pinMode(_pinSTEP, OUTPUT);
		digitalWrite(_pinSTEP, LOW);
	}

	pinMode(_pinCS, OUTPUT);
	digitalWrite(_pinCS, HIGH);

	if (uses_sw_spi) TMC_SW_SPI.init();

	// Reset registers
	push();

	toff(8); //off_time(8);
	tbl(1); //blank_time(24);
}

void TMC2130Stepper::send2130(uint8_t addressByte, uint32_t *config) {
	if (uses_sw_spi) {
		digitalWrite(_pinCS, LOW);

		status_response = TMC_SW_SPI.transfer(addressByte & 0xFF); // s =

		if (addressByte >> 7) { // Check if WRITE command
			//*config &= ~mask; // Clear bits being set
			//*config |= (value & mask); // Set new values
			TMC_SW_SPI.transfer((*config >> 24) & 0xFF);
			TMC_SW_SPI.transfer((*config >> 16) & 0xFF);
			TMC_SW_SPI.transfer((*config >>  8) & 0xFF);
			TMC_SW_SPI.transfer(*config & 0xFF);
		} else { // READ command
			TMC_SW_SPI.transfer16(0x0000); // Clear SPI
			TMC_SW_SPI.transfer16(0x0000);
			digitalWrite(_pinCS, HIGH);
			digitalWrite(_pinCS, LOW);

			TMC_SW_SPI.transfer(addressByte & 0xFF); // Send the address byte again
			*config = TMC_SW_SPI.transfer(0x00);
			*config <<= 8;
			*config|= TMC_SW_SPI.transfer(0x00);
			*config <<= 8;
			*config|= TMC_SW_SPI.transfer(0x00);
			*config <<= 8;
			*config|= TMC_SW_SPI.transfer(0x00);
		}

		digitalWrite(_pinCS, HIGH);
	} else {
		SPI.begin();
		SPI.beginTransaction(SPISettings(16000000/8, MSBFIRST, SPI_MODE3));
		digitalWrite(_pinCS, LOW);

		status_response = SPI.transfer(addressByte & 0xFF); // s =

		if (addressByte >> 7) { // Check if WRITE command
			//*config &= ~mask; // Clear bits being set
			//*config |= (value & mask); // Set new values
			SPI.transfer((*config >> 24) & 0xFF);
			SPI.transfer((*config >> 16) & 0xFF);
			SPI.transfer((*config >>  8) & 0xFF);
			SPI.transfer(*config & 0xFF);
		} else { // READ command
			SPI.transfer16(0x0000); // Clear SPI
			SPI.transfer16(0x0000);
			digitalWrite(_pinCS, HIGH);
			digitalWrite(_pinCS, LOW);

			SPI.transfer(addressByte & 0xFF); // Send the address byte again
			*config = SPI.transfer(0x00);
			*config <<= 8;
			*config|= SPI.transfer(0x00);
			*config <<= 8;
			*config|= SPI.transfer(0x00);
			*config <<= 8;
			*config|= SPI.transfer(0x00);
		}

		digitalWrite(_pinCS, HIGH);
		SPI.endTransaction();
	}
}

bool TMC2130Stepper::isEnabled() { return !digitalRead(_pinEN) && toff(); }
